feat: add half menu module
