# controller/openapi_types.gen.go
@@ -3,10 +3,22 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.1-0.20240331212514-80f0b978ef16 DO NOT EDIT.
 package controller
 
+// Defines values for MenuStatus.
+const (
+	MenuStatusDisabled MenuStatus = "disabled"
+	MenuStatusEnabled  MenuStatus = "enabled"
+)
+
+// Defines values for MenuType.
+const (
+	Button MenuType = "button"
+	Page   MenuType = "page"
+)
+
 // Defines values for RoleStatus.
 const (
-	Disabled RoleStatus = "disabled"
-	Enabled  RoleStatus = "enabled"
+	RoleStatusDisabled RoleStatus = "disabled"
+	RoleStatusEnabled  RoleStatus = "enabled"
 )
 
 // Defines values for UserStatus.
@@ -19,6 +31,40 @@ const (
 type Error struct {
 	Code    int32  `json:"code"`
 	Message string `json:"message"`
+}
+
+// Menu defines model for Menu.
+type Menu struct {
+	Code        string     `json:"code" validate:"max=64"`
+	Created     string     `json:"created"`
+	Description string     `json:"description" validate:"max=1024"`
+	Id          *int32     `json:"id,omitempty"`
+	Name        string     `json:"name" validate:"max=64"`
+	ParentId    int32      `json:"parent_id" validate:"min=1"`
+	ParentPath  string     `json:"parent_path" validate:"max=1024"`
+	Path        string     `json:"path" validate:"max=1024"`
+	Property    string     `json:"property" validate:"max=64"`
+	Resource    []Resource `json:"resource"`
+	Sequence    int16      `json:"sequence" validate:"min=1"`
+	Status      MenuStatus `json:"status" validate:"oneof=enabled disabled"`
+	Type        MenuType   `json:"type" validate:"oneof=page button"`
+	Updated     string     `json:"updated"`
+}
+
+// MenuStatus defines model for Menu.Status.
+type MenuStatus string
+
+// MenuType defines model for Menu.Type.
+type MenuType string
+
+// Resource defines model for Resource.
+type Resource struct {
+	Created string `json:"created"`
+	Id      *int32 `json:"id,omitempty"`
+	MenuId  int32  `json:"menu_id"`
+	Method  string `json:"method" validate:"max=64"`
+	Path    string `json:"path" validate:"max=1024"`
+	Updated string `json:"updated"`
 }
 
 // Role defines model for Role.
@@ -73,6 +119,12 @@ type UserRole struct {
 	UserId  *int32 `json:"user_id,omitempty"`
 }
 
+// GetApiV1MenusParams defines parameters for GetApiV1Menus.
+type GetApiV1MenusParams struct {
+	CodePath string `form:"codePath" json:"codePath"`
+	Name     string `form:"name" json:"name"`
+}
+
 // GetApiV1RolesParams defines parameters for GetApiV1Roles.
 type GetApiV1RolesParams struct {
 	Name     string `form:"name" json:"name"`
@@ -89,6 +141,12 @@ type GetApiV1UsersParams struct {
 	Current  int32  `form:"current" json:"current"`
 	PageSize int32  `form:"pageSize" json:"pageSize"`
 }
+
+// PostApiV1MenusJSONRequestBody defines body for PostApiV1Menus for application/json ContentType.
+type PostApiV1MenusJSONRequestBody = Menu
+
+// PutApiV1MenusIdJSONRequestBody defines body for PutApiV1MenusId for application/json ContentType.
+type PutApiV1MenusIdJSONRequestBody = Menu
 
 // PostApiV1RolesJSONRequestBody defines body for PostApiV1Roles for application/json ContentType.
 type PostApiV1RolesJSONRequestBody = Role
